# rbc-statement-parser

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .rcexample  .releaserc  Dockerfile  Pipfile  README.md  categories.py  config.py  excludes.py  main.py  parse-chequing.py  parse-pdf-chunks.py  parse-raw.py  parse.py  parse_chq.py  parse_config.py  parse_csv.py  parse_pdf.py  parse_tbl.py  parse_visa.py  pyproject.toml  utils.py
.github/.workflows/: release.yml
.github/workflows/: release.yml
app/: chequing.py  entities.py  formatters.py  io.py  types.py  utils.py  visa.py
config/: categories.json  excludes.json
