[project]
name = "rbc-statement-parser"
version = "0.0.0"
description = "Python script for parsing RBC PDF statements"
requires-python = ">=3.12"
dependencies = ["pymupdf", "beautifulsoup4"]

[project.scripts]
parse = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
include = ["main.py"]

[dependency-groups]
dev = ["pylint"]
